# microservice-cpp

./: .gitignore  CMakeLists.txt  LICENSE  json_convert_code_gen.py  main.cpp  readme.md  requirements.txt
db/: CMakeLists.txt  base_repo.cpp  base_repo.h  flight_data_header_repo.cpp  flight_data_header_repo.h
dc/: CMakeLists.txt  configuation.h
docker/mariadb/: docker-compose.yml  init.sql  mysql_init.sh
docker/mysql/: docker-compose.yml  mysql_init.sh
docker/nacos/: Readme.md  docker-compose.yml  nacos_init.sh  nacos_init.sql
docker/rabbitmq/: docker-compose.yml
helpers/: CMakeLists.txt  time_utils.cpp  time_utils.h
include/nacos/factory/: INacosServiceFactory.h
include/rabbitmq-c/: amqp.h
lib/: libmariadbcpp.dylib  libnacos-cli.dylib  librabbitmq.dylib  librabbitmq.so.4  librestclient-cpp.dylib
mariadb/: mysql_init.sh
mariadb/mariadb/conf/: my.cnf
mariadb/mariadb/data/: .my-healthcheck.cnf  aria_log_control
mariadb/mariadb/data/fdpp/: flightdataheader.frm
mariadb/mariadb/data/mysql/: column_stats.MAI  column_stats.frm  columns_priv.MAI  columns_priv.frm  db.MAI  db.frm  event.MAI  event.frm  func.MAI  func.frm  general_log.frm  global_priv.MAD  global_priv.MAI  global_priv.frm  gtid_slave_pos.frm  help_category.MAI  help_category.frm  help_keyword.MAI  help_keyword.frm  help_relation.MAI  help_relation.frm  help_topic.MAI  help_topic.frm  index_stats.MAI  index_stats.frm  innodb_index_stats.frm  innodb_index_stats.ibd  innodb_table_stats.frm  innodb_table_stats.ibd  plugin.MAI  plugin.frm  proc.MAD  proc.MAI  proc.frm  procs_priv.MAI  procs_priv.frm  proxies_priv.MAD  proxies_priv.MAI  proxies_priv.frm  roles_mapping.MAI  (+22 more)
mariadb/mariadb/data/sys/: host_summary.frm  host_summary_by_file_io.frm  host_summary_by_file_io_type.frm  host_summary_by_stages.frm  host_summary_by_statement_latency.frm  host_summary_by_statement_type.frm  innodb_buffer_stats_by_schema.frm  innodb_buffer_stats_by_table.frm  (+95 more)
models/: CMakeLists.txt  flight_data_header.cpp  flight_data_header.h  serialize_interface.h
queue/: CMakeLists.txt  flight_data_parse_worker.cpp  flight_data_parse_worker.h  rabbitmq_consumer.cpp  rabbitmq_consumer.h
rabbitmq/: docker-compose.yml
rpc/: CMakeLists.txt  rpc.cpp  rpc.h
